--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI/CD pipline
+name: CI/CD docker-hub
 on:
     push:
     pull_request:
@@ -10,7 +10,7 @@ jobs:
         steps:
             - uses: actions/checkout@v3
             - name: Build dockerfile
-              run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/getvideo:latest
+              run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/getrecept:latest
 
             - name: Push to dockerhub
               uses: docker/login-action@v3.0.0
@@ -18,5 +18,5 @@ jobs:
                 username: ${{ secrets.DOCKER_USERNAME }}
                 password: ${{ secrets.DOCKER_PASSWORD }}
             - name: Push tag to DockerHub
-              run: docker push ${{ secrets.DOCKER_USERNAME }}/getvideo:latest
+              run: docker push ${{ secrets.DOCKER_USERNAME }}/getrecept:latest
     
