--- a/.github/workflows/CDYA.yml
+++ b/.github/workflows/CDYA.yml
@@ -3,12 +3,12 @@ on:
     workflow_dispatch:
 
 jobs:
-    push_to_YX:
+    push_to_YC:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
             - name: Build docker image
-              run: docker build . --file Dockerfile --tag cr.yandex/${{secrets.YC_REGISTRY_ID }}/getvideo:latest
+              run: docker build . --file Dockerfile --tag cr.yandex/${{secrets.YC_REGISTRY_ID }}/getrecept:latest
             - name: Login to YC Registry
               uses: docker/login-action@v3.0.0
               with:
@@ -16,7 +16,7 @@ jobs:
                 username: json_key
                 password: ${{ secrets.YC_KEYS }}
             - name: Push tag to YC Registry
-              run: docker push cr.yandex/${{ secrets.YC_REGISTRY_ID }}/getvideo:latest 
+              run: docker push cr.yandex/${{ secrets.YC_REGISTRY_ID }}/getrecept:latest 
     deploy:
         name: Deploy
         runs-on: ubuntu-latest
@@ -28,6 +28,6 @@ jobs:
               yc-sa-json-credentials: ${{ secrets.YC_KEYS }}
               container-name: ${{ secrets.YC_CONTAINER_NAME }}
               folder-id: ${{ secrets.YC_FOLDER_ID }}
-              revision-image-url: cr.yandex/${{ secrets.YC_REGISTRY_ID }}/getvideo:latest
+              revision-image-url: cr.yandex/${{ secrets.YC_REGISTRY_ID }}/getrecept:latest
               revision-service-account-id: ${{ secrets.YC_SA_ID }}
               
