--- a/.github/workflows/CDYA.yml
+++ b/.github/workflows/CDYA.yml
@@ -20,7 +20,7 @@ jobs:
     deploy:
         name: Deploy
         runs-on: ubuntu-latest
-        needs: [push_to_YX]
+        needs: [push_to_YC]
         steps:
           - name: Deploy serverless container
             uses: yc-actions/yc-sls-container-deploy@v1
