new file:   tests/unit.py

--- a/.github/workflows/CDYA.yml
+++ b/.github/workflows/CDYA.yml
@@ -3,18 +3,32 @@ on:
     workflow_dispatch:
 
 jobs:
+    tests:
+      runs-on: ubuntu-latest
+      steps:
+          - uses: actions/checkout@v3
+          - name: Prepare unit tests
+            run: |
+              sudo apt update
+              sudo apt install -y python3-pip
+              pip install -r requirements.txt
+          - name: Run unit tests
+            run: |
+              pytest tests/unit.py
     push_to_YC:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
             - name: Build docker image
               run: docker build . --file Dockerfile --tag cr.yandex/${{secrets.YC_REGISTRY_ID }}/getrecept:latest
+
             - name: Login to YC Registry
               uses: docker/login-action@v3.0.0
               with:
                 registry: cr.yandex
                 username: json_key
                 password: ${{ secrets.YC_KEYS }}
+                
             - name: Push tag to YC Registry
               run: docker push cr.yandex/${{ secrets.YC_REGISTRY_ID }}/getrecept:latest 
     deploy:
