--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,14 +9,15 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
-            - name: Build dockerfile
+            - name: Build docker image
               run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/getrecept:latest
 
-            - name: Push to dockerhub
+            - name: Log in to DockerHub
               uses: docker/login-action@v3.0.0
               with:
                 username: ${{ secrets.DOCKER_USERNAME }}
                 password: ${{ secrets.DOCKER_PASSWORD }}
+                
             - name: Push tag to DockerHub
               run: docker push ${{ secrets.DOCKER_USERNAME }}/getrecept:latest
     
