--- a/.github/workflows/CDYA.yml
+++ b/.github/workflows/CDYA.yml
@@ -7,16 +7,21 @@ jobs:
       runs-on: ubuntu-latest
       steps:
           - uses: actions/checkout@v3
-          - name: Prepare unit tests
+          - name: Prepare for tests
             run: |
               sudo apt update
               sudo apt install -y python3-pip
               pip install -r requirements.txt
-          - name: Run unit tests
+              docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/getrecept:latest
+              docker run -p 80:80 -d ${{ secrets.DOCKER_USERNAME }}/getrecept:latest
+              sleep 5
+          - name: Run tests
             run: |
               pytest tests/unit.py
+              pytest tests/component.py
     push_to_YC:
         runs-on: ubuntu-latest
+        needs: [tests]
         steps:
             - uses: actions/checkout@v3
             - name: Build docker image
